@@ -124,7 +124,7 @@ $access_input = elgg_view('input/access', array(
 	'value' => $vars['access_id']
 ));
 
-$categories_input = elgg_view('categories', $vars);
+$categories_input = elgg_view('input/categories', $vars);
 
 // hidden inputs
 $container_guid_input = elgg_view('input/hidden', array('name' => 'container_guid', 'value' => elgg_get_page_owner_guid()));
