@@ -3,6 +3,7 @@ x.x:
 
 - fixed: depricated notice with widget_manager
 - fixed: depricated notice on blog save form (thanks to ZigZag http://community.elgg.org/pg/profile/zigzag)
+- fixed: categories no displaying the same as in core
 
 2.1.2 (2012-01-23):
 
